﻿2011-05-26 COAH96KoxU <queue glasscore.net>

	* req/Core/Util.php: 制御文字などを処理した後再度エンコードし直すように

2011-05-21 COAH96KoxU <queue glasscore.net>

	* *.php: BOM の除去
	* script/Read/Index.js: disabled の指定方法を修正
	* script/Read/Edit.js: disabled の指定方法を修正

2011-05-21 COAH96KoxU <queue glasscore.net>

	* initial